--- a/public/desktop.ini
+++ b/public/desktop.ini
@@ -1,2 +1,3 @@
 [LocalizedFileNames]
 Screenshot 2025-08-24 222238.png=@Screenshot 2025-08-24 222238.png,0
+Screenshot 2025-09-04 223714.png=@Screenshot 2025-09-04 223714.png,0
